--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,8 +2,10 @@
   <h3  class="text-white">Gifs App</h3>
   <hr class="text-white">
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">
-      Valorant
+    <button *ngFor="let tag of history" class="list-group-item list-group-item-action"
+    (click)="search(tag)"
+    >
+      {{tag | titlecase}}
     </button>
   </div>
 </div>
